# asapi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.py  original.py  pyproject.toml
.github/: workflow.yaml
.github/workflows/: ci.yaml
asapi/: __init__.py  _injected.py  _parameters.py  _serve.py  _signal_handling.py
tests/: run_server.py  test_injected.py  test_signal_handling.py
