[project]
name = "asapi"
version = "0.5.0"
description = "Thin wrapper around FastAPI"
authors = [{ name = "Adrian Garcia Badaracco", email = "1755071+adriangb@users.noreply.github.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0,<1",
    "anyio>=4.3.0,<5",
    "typing-extensions>=4.12.0,<5",
    "uvicorn>=0.30.0,<0.31",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9",
    "psycopg[binary, pool]>=3.1.19,<4",
    "coverage>=7.5.3,<8",
    "ruff>=0.4.6,<0.5",
    "pyright>=1.1.365,<2",
    "trio>=0.25.1,<0.26",
    "pre-commit>=3.7.1,<4",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["asapi", "tests"]

[tool.coverage.report]
exclude_lines = [
    "\\.\\.\\.",
    "pass",
]
