[project]
name = "asapi"
version = "0.7.0"
description = "Thin wrapper around FastAPI"
authors = [{ name = "Adrian Garcia Badaracco", email = "1755071+adriangb@users.noreply.github.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0",
    "anyio>=4.3.0",
    "typing-extensions>=4.12.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "psycopg[binary, pool]>=3.1.19",
    "coverage>=7.5.3",
    "ruff>=0.4.6",
    "pyright>=1.1.365",
    "trio>=0.25.1",
    "pre-commit>=3.7.1",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["asapi", "tests"]

[tool.coverage.report]
exclude_lines = [
    "\\.\\.\\.",
    "pass",
]
